# PaperFlow

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: idea_example.md
examples/sample_run/: clarified_idea.json  final_discussion.md  query_plan.json  run_manifest.json  (+4 more)
prompts/: clarification_turn.txt  clarify_idea.txt  final_synthesizer.txt  main_orchestrator.txt  paper_briefer.txt  paper_scout_subagent.txt  provider_wrapper.txt  query_planner.txt  reranker.txt  scout_shortlist_synthesizer.txt  self_check.txt  typst_formatter.txt
providers/: codex.example.yaml  custom_cli.example.yaml  deepseek.example.yaml  glm_api.example.yaml  nvidia.example.yaml
research_flow/: __init__.py  briefing.py  cache.py  clarification.py  cli.py  config.py  dedupe.py  idea.py  models.py  orchestrator.py  pdf_processing.py  prompts_loader.py  query_planner.py  ranking.py  relevance.py  rendering.py  retrieval.py  scouting.py  synthesis.py  utils.py  validation.py
scripts/: cleanup_provider_temp_dirs.sh  glm_api_smoketest.py  run_deepseek.sh  run_example.sh  run_glm_api.sh  run_nvidia.sh  start_gui.sh
templates/: paper_brief.typ.j2
tests/: test_api_only_and_thinking.py  test_candidate_pooling.py  test_clarification_turn.py  test_cli_json_output.py  test_deepseek_defaults.py  test_openalex_retriever.py  test_query_planner_recall.py  test_relevance.py  test_retrieval_progress.py  test_run_progress_state.js  test_scouting_chain.py  test_ui_session_state.js
ui/: package-lock.json  package.json
validate/: validate_outputs.py
(+19 files in other folders)
